--- a/src/main/java/com/ucompensar/mundialslider/Mundial.form
+++ b/src/main/java/com/ucompensar/mundialslider/Mundial.form
@@ -129,8 +129,8 @@
                   <Component id="jLabel2" pref="33" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jButtonConsultar" pref="63" max="32767" attributes="0"/>
-                      <Component id="jTextAnio" max="32767" attributes="0"/>
+                      <Component id="jButtonConsultar" max="32767" attributes="0"/>
+                      <Component id="jTextAnio" pref="63" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
@@ -145,12 +145,17 @@
             <Property name="minimum" type="int" value="1950"/>
             <Property name="paintLabels" type="boolean" value="true"/>
             <Property name="paintTicks" type="boolean" value="true"/>
+            <Property name="snapToTicks" type="boolean" value="true"/>
             <Property name="value" type="int" value="1986"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextAnio">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="18" style="1"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextAnioActionPerformed"/>
@@ -250,6 +255,10 @@
         <Component class="javax.swing.JTextField" name="jTextCampeon">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="18" style="1"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
         </Component>
       </SubComponents>
